tests/NormalTests/paczka1/fuzzy1/67858094.err
Error in line 3: MsZlG6TDLlu A926 15,8
Error in line 4: MsZlG6TDLlu S572 7,6
Error in line 19: c1GK S40 68,1
Error in line 15: BWZic S572 67,6
Error in line 23: BWZic S40 14,8
Error in line 2: lYpAa44 A80 48,5
Error in line 28: A926 A926 34,2
Error in line 36: RckxVq A926 36,42
